# libusb-1.0.24

./: README.md
src/libusb-1.0.24/: CMakeLists.txt
src/libusb-1.0.24/linux/: config.h
src/libusb-1.0.24/os/: windows_winusb.c
